Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107079

[qmltc] dash in filename breaks compilatino

XMLWordPrintable

    • afe6704f3 (6.4), 591306fb0 (dev)

      having a dash in a compiled qml file breaks the type compiler: it will create dashes in c++ and preprocessor identifiers

      as a reproducer try to enable the type compiler in examples/quick/text.

       

      compare: https://code.qt.io/cgit/qt/qtdeclarative.git/tree/examples/quick/text/CMakeLists.txt?h=6.4#n44

        For Gerrit Dashboard: QTBUG-107079
        # Subject Branch Project Status CR V

            sami.shalayel Sami Shalayel
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes