tests/auto/qml/qmltc_qprocess/tst_qmltc_qprocess.cpp
@@ -47,6 +47,7 @@ private slots:
     void inlineComponent();
     void singleton();
     void warningsAsErrors();
+    void dashesInFilename();
 };
 
 #ifndef TST_QMLTC_QPROCESS_RESOURCES
@@ -190,6 +191,15 @@ void tst_qmltc_qprocess::warningsAsErrors()
 {
     const auto errors = runQmltc(u"erroneousFile.qml"_s, false);
     QVERIFY2(errors.contains(u"Error:"_s), qPrintable(errors)); // Note: not a warning!
+}
+
+void tst_qmltc_qprocess::dashesInFilename()
+{
+    {
+        const auto errors = runQmltc(u"kebab-case.qml"_s, false);
+        QVERIFY(errors.contains(
+                u"The given QML filename is unsuited for type compilation: the name must consist of letters, digits and underscores, starting with a letter or an underscore and ending in '.qml'!"_s));
+    }
 }
 
 QTEST_MAIN(tst_qmltc_qprocess)
